--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.51.5",
     "react-i18next": "^14.1.1",
     "react-router-dom": "^6.23.0",
+    "recharts": "^3.7.0",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
     "sweetalert2": "^11.4.8",
